--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -36,10 +36,13 @@
                         HexoPress
                     </div>
                     <div class="hexo-hero-subtext">
-                        Blog from your google docs.
+                        A tiny blogging platform. <br/>
+                        Write your posts in Google Docs. <br/>
+                        Put them under a folder in your Google Drive. <br/> 
+                        Publish a blog out of them.
                     </div>
                     <div class="hexo-hero-subtext">
-                        <a href="/login">Start Blogging Now!</a>
+                        <a href="/login">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -50,8 +53,8 @@
                     How?
                 </div>
                 <div class="hexo-hero-subtext">
-                    Create a folder named 'blog' in your google drive.
-                    That's all! Every google doc from the folder, will be a post in your HexoPress blog.
+                    Once you sign up, we'll drop a folder named <span className="hexopress-keyword">hexopress</span> into your Google Drive.
+                    From that point onwards, every Google Docs file you put in that folder will be compiled into blog posts for your freely hosted hexopress blog.
                 </div>
                 <div class="hexo-hero-subtext">
                     <a href="/login">Get started now.</a>
@@ -65,8 +68,8 @@
                     Why?
                 </div>
                 <div class="hexo-hero-subtext">
-                    The project is based off Octopress. Octopress is for hackers with terminals and gits. Hexopress takes the elegance of Octopress and combines it with the beautiful, powerful & easily accessible Google Docs.
-                    Not everytime you have a brilliant idea, you have access to a markdown editor or a terminal. With Google Docs you can now write anywhere, on any device and still, get a blog out of them in a click!
+                    The project is based off <a href="http://octopress.org">Octopress</a>. Octopress is for hackers with terminals and gits. Hexopress takes the elegance of Octopress and combines it with the beautiful, powerful & easily accessible <a href="http://docs.google.com">Google Docs.</a>
+                    Not everytime you have a brilliant idea, you will have access to a markdown editor or a terminal. With Google Docs you can now write anywhere, on any device and sync them to your blog in a click!
                 </div>
                 <div class="hexo-hero-subtext">
                     <a href="/login">Login with google.</a>
