--- a/hexo/templates/loggedin_index.html
+++ b/hexo/templates/loggedin_index.html
@@ -20,7 +20,18 @@
 
     <script>
         window.hexopress = {
-            user_email: '{{ user.email }}'
+            user: {
+                email: '{{ user.email }}',
+                username: '{{ user.username }}',
+                name: '{{ user.name }}',
+                accountinfo_filled: {{ user.accountinfo_filled }}
+            },
+            blog: {
+                title: '{{ blog.title }}',
+                subtitle: '{{ blog.subtitle }}',
+                description: '{{ blog.description }}',
+                is_generated: {{ blog.is_generated }},
+            }
         };
     </script>
     <script src="/static/bin/bundle.js"></script>
