--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -36,9 +36,9 @@
                         HexoPress
                     </div>
                     <div class="hexo-hero-subtext">
-                        A tiny blogging platform. <br/>
-                        Write your posts in Google Docs. <br/>
-                        Put them under a folder in your Google Drive. <br/> 
+                        A tiny blogging platform. <br/></br/>
+                        Write your posts in <a target="_blank" href="http://docs.google.com">Google Docs.</a> <br/>
+                        Put them under a folder in your <a target="_blank" href="http://drive.google.com">Google Drive.</a> <br/> 
                         Publish a blog out of them.
                     </div>
                     <div class="hexo-hero-subtext">
@@ -47,17 +47,18 @@
                 </div>
             </div>
         </div>
+
         <div class="columns">
             <div class="hero-container">
                 <div class="hexo-hero-text">
                     How?
                 </div>
                 <div class="hexo-hero-subtext">
-                    Once you sign up, we'll drop a folder named <span className="hexopress-keyword">hexopress</span> into your Google Drive.
-                    From that point onwards, every Google Docs file you put in that folder will be compiled into blog posts for your freely hosted hexopress blog.
+                    Once you sign up, we'll drop a folder named <span class="hexopress-keyword">hexopress</span> into your Google Drive.
+                    From that point onwards, every Google Docs file you put in that folder will be compiled into a blog post, for your freely hosted hexopress blog.
                 </div>
                 <div class="hexo-hero-subtext">
-                    <a href="/login">Get started now.</a>
+                    <a href="/login">Try now</a>
                 </div>
             </div>
         </div>
@@ -65,10 +66,24 @@
         <div class="columns">
             <div class="hero-container">
                 <div class="hexo-hero-text">
+                    Can I trust the app?
+                </div>
+                <div class="hexo-hero-subtext">
+
+                </div>
+                <div class="hexo-hero-subtext">
+                    The project's source code is open sourced @ <a href="/login">github</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="columns">
+            <div class="hero-container">
+                <div class="hexo-hero-text">
                     Why?
                 </div>
                 <div class="hexo-hero-subtext">
-                    The project is based off <a href="http://octopress.org">Octopress</a>. Octopress is for hackers with terminals and gits. Hexopress takes the elegance of Octopress and combines it with the beautiful, powerful & easily accessible <a href="http://docs.google.com">Google Docs.</a>
+                    The project is based off <a target="_blank" href="http://octopress.org">Octopress</a>. Octopress is for hackers with terminals and gits. Hexopress takes the elegance of Octopress and combines it with the beautiful, powerful & easily accessible <a href="http://docs.google.com" target="_blank">Google Docs.</a>
                     Not everytime you have a brilliant idea, you will have access to a markdown editor or a terminal. With Google Docs you can now write anywhere, on any device and sync them to your blog in a click!
                 </div>
                 <div class="hexo-hero-subtext">
@@ -76,12 +91,13 @@
                 </div>
             </div>
         </div>
+
     </div>
     
     
     <footer class="footer">
         <section id="copyright" class="grid-footer container grid-960">
-          <p class="footer-p">Designed and built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank">Joe Lewis</a>. Licensed under the <a href="https://github.com/picturepan2/spectre/blob/master/LICENSE" target="_blank">MIT License</a>.</p>
+          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a href="https://github.com/picturepan2/spectre/blob/master/LICENSE" target="_blank">Source</a></p>
         </section>
     </footer>
 </body>
