--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <script src="/static/bin/bundle.js"></script>
+    <link rel="shortcut icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/bin/css/spectre.min.css" />
     <link rel="stylesheet" href="/static/bin/css/hexopress.css" />
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
