--- a/hexo/templates/loggedin_index.html
+++ b/hexo/templates/loggedin_index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/bin/css/spectre.min.css" />
     <link rel="stylesheet" href="/static/bin/css/hexopress.css" />
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
