--- a/hexo/static/bin/css/hexopress.css
+++ b/hexo/static/bin/css/hexopress.css
@@ -76,3 +76,8 @@ body {
     border-bottom: 1px solid #e2e2e2;
     margin-top: 10px;
 }
+
+.form-group-hexopress {
+    margin: 10px;
+    margin-top: 20px;
+}
