updated github linkwq

--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -74,7 +74,7 @@
 
                 </div>
                 <div class="hexo-hero-subtext">
-                    The project's source code is open sourced @ <a href="/login">github</a>
+                    The project's source code is open sourced @ <a target="_blank" href="https://github.com/joelewis/hexopress">github</a>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
     
     <footer class="footer">
         <section id="copyright" class="grid-footer container grid-960">
-          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a href="https://github.com/picturepan2/spectre/blob/master/LICENSE" target="_blank">Source</a></p>
+          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a target="_blank" href="https://github.com/joelewis/hexopress">Source</a></p>
         </section>
     </footer>
 </body>
