--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <script src="/static/bin/bundle.js"></script>
-    <link rel="shortcut icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/bin/css/spectre.min.css" />
-    <link rel="stylesheet" href="/static/bin/css/hexopress.css" />
+    <script src="{{ STATIC_HOST }}/static/bin/bundle.js"></script>
+    <link rel="shortcut icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="{{ STATIC_HOST }}/static/bin/css/spectre.min.css" />
+    <link rel="stylesheet" href="{{ STATIC_HOST }}/static/bin/css/hexopress.css" />
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
