--- a/hexo/templates/loggedin_index.html
+++ b/hexo/templates/loggedin_index.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/static/bin/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/static/bin/css/spectre.min.css" />
-    <link rel="stylesheet" href="/static/bin/css/hexopress.css" />
+    <link rel="shortcut icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="{{ STATIC_HOST }}/static/bin/css/spectre.min.css" />
+    <link rel="stylesheet" href="{{ STATIC_HOST }}/static/bin/css/hexopress.css" />
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 </head>
@@ -36,7 +36,7 @@
             }
         };
     </script>
-    <script src="/static/bin/bundle.js"></script>
+    <script src="{{ STATIC_HOST }}/static/bin/bundle.js"></script>
 </body>
 
 </html>
