linebreaks in description won't break config.yml

--- a/hexo/templates/config.yml.html
+++ b/hexo/templates/config.yml.html
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://hexopress.com
-title: {{ title }}
-subtitle: {{ subtitle }}
-author: {{ author }}
+title: {{ title | linebreaksbr }}
+subtitle: {{ subtitle | linebreaksbr }}
+author: {{ author | linebreaksbr }}
 simple_search: https://www.google.com/search
-description: {{ description }}
+description: {{ description | linebreaksbr }}
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
