--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="google-site-verification" content="ERmP8iA_7Iu1VDU-W7F_ltOss-_gqc08PyB4PA9jZH0" />
     <script src="{{ STATIC_HOST }}/static/bin/bundle.js"></script>
     <link rel="shortcut icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="{{ STATIC_HOST }}/static/bin/img/favicon.ico" type="image/x-icon">
