--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -11,6 +11,13 @@
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <script src="https://apis.google.com/js/client:platform.js?onload=start" async defer>
     </script>
+    <!-- start Mixpanel -->
+    <script type="text/javascript">
+        (function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
+        0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+        for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
+        mixpanel.init("749db35694449cb618cd12eb9de3d19a");
+    </script><!-- end Mixpanel -->
     <script>
       function start() {
         gapi.load('auth2', function() {
@@ -29,7 +36,7 @@
         <div class="columns">
             <div class="column col-10">&nbsp;</div>
             <div class="column col-2">
-                <a href="/login" class="btn">Login with Google</a>
+                <a href="/login" id="#login-button-1" class="btn">Login with Google</a>
             </div>
         </div>
         <div class="columns">
@@ -45,7 +52,7 @@
                         Publish a blog out of them.
                     </div>
                     <div class="hexo-hero-subtext">
-                        <a href="/login">Get Started</a>
+                        <a href="/login" id="#login-button-2">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +68,7 @@
                     From that point onwards, every Google Docs file you put in that folder will be compiled into a blog post, for your freely hosted hexopress blog.
                 </div>
                 <div class="hexo-hero-subtext">
-                    <a href="/login">Try now</a>
+                    <a href="/login" id="#login-button-3">Try now</a>
                 </div>
             </div>
         </div>
@@ -75,7 +82,7 @@
 
                 </div>
                 <div class="hexo-hero-subtext">
-                    The project's source code is open sourced @ <a target="_blank" href="https://github.com/joelewis/hexopress">github</a>
+                    The project's source code is open sourced @ <a id="#github-link" target="_blank" href="https://github.com/joelewis/hexopress">github</a>
                 </div>
             </div>
         </div>
@@ -90,7 +97,7 @@
                     Not everytime you have a brilliant idea, you will have access to a markdown editor or a terminal. With Google Docs you can now write anywhere, on any device and sync them to your blog in a click!
                 </div>
                 <div class="hexo-hero-subtext">
-                    <a href="/login">Login with google.</a>
+                    <a href="/login" id="#login-button-4">Login with google.</a>
                 </div>
             </div>
         </div>
@@ -100,9 +107,19 @@
     
     <footer class="footer">
         <section id="copyright" class="grid-footer container grid-960">
-          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a target="_blank" href="https://github.com/joelewis/hexopress">Source</a></p>
+          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank" id="joe-lewis-handle">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a id="github-link-footer" target="_blank" href="https://github.com/joelewis/hexopress">Source</a></p>
         </section>
     </footer>
+
+<script>
+    mixpanel.track_links('#login-button-1', 'Login button in the top clicked');
+    mixpanel.track_links('#login-button-2', 'Login button after hero clicked');
+    mixpanel.track_links('#login-button-3', 'Login button after How? clicked');
+    mixpanel.track_links('#login-button-4', 'Login button after Why? clicked');
+    mixpanel.track_links('#github-link', 'Github link clicked');
+    mixpanel.track_links('#joe-lewis-handle', 'Footer twitter link clicked');
+    mixpanel.track_links('#github-link-footer', 'Footer github link clicked');
+</script>
 </body>
 
 </html>
