demo blog button added to homepage

--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -27,9 +27,12 @@
 <body>
     <div class="container grid-960 hexo-container">
         <div class="columns">
-            <div class="column col-10">&nbsp;</div>
+            <div class="column col-9">&nbsp;</div>
             <div class="column col-2">
-                <a href="/login" id="#login-button-1" class="btn">Login with Google</a>
+                <a href="http://hexopress.com/@joe" class="btn">Demo Blog</a>
+            </div>
+            <div class="column col-1">
+                <a href="/login" id="#login-button-1" class="btn btn-primary">Login with Google</a>
             </div>
         </div>
         <div class="columns">
