google analytics enabled

--- a/hexo/templates/config.yml.html
+++ b/hexo/templates/config.yml.html
@@ -95,7 +95,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: {{ ga_id }}
 
 # Facebook Like
 facebook_like: false
