users can input their google analytics id

--- a/hexo/templates/loggedin_index.html
+++ b/hexo/templates/loggedin_index.html
@@ -33,6 +33,7 @@
                 subtitle: '{{ blog.subtitle | escapejs }}',
                 description: '{{ blog.description | escapejs }}',
                 is_generated: {{ blog.is_generated }},
+                ga_id: '{{ blog.ga_id | escapejs }}'
             }
         };
     </script>
