relinked demo blog

--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -29,7 +29,7 @@
         <div class="columns">
             <div class="column col-9">&nbsp;</div>
             <div class="column col-2">
-                <a href="http://hexopress.com/@joe" class="btn">Demo Blog</a>
+                <a href="/@joelewis" class="btn">Demo Blog</a>
             </div>
             <div class="column col-1">
                 <a href="/login" id="#login-button-1" class="btn btn-primary">Login with Google</a>
