added privacy policy links in footer

--- a/hexo/templates/index.html
+++ b/hexo/templates/index.html
@@ -75,11 +75,13 @@
                     Can I trust the app?
                 </div>
                 <div class="hexo-hero-subtext">
-
-                </div>
-                <div class="hexo-hero-subtext">
                     The project's source code is open sourced @ <a id="#github-link" target="_blank" href="https://github.com/joelewis/hexopress">github</a>
                 </div>
+                <div class="hexo-hero-subtext">
+                    <a href="/privacy"> Read privacy policy </a><br>
+                    <a href="/google-disclosure"> Google API Disclosure </a> 
+                </div>
+
             </div>
         </div>
 
@@ -103,7 +105,7 @@
     
     <footer class="footer">
         <section id="copyright" class="grid-footer container grid-960">
-          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank" id="joe-lewis-handle">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a id="github-link-footer" target="_blank" href="https://github.com/joelewis/hexopress">Source</a></p>
+          <p class="footer-p">Built with ♥ by <a href="https://twitter.com/vettijoe" target="_blank" id="joe-lewis-handle">Joe Lewis</a> made out of awesome open source projects, coffee and boredom | <a id="github-link-footer" target="_blank" href="https://github.com/joelewis/hexopress">Source</a> | <a href="/privacy"> Privacy Policy </a> | <a href="/google-disclosure"> Google API Disclosure </a></p>
         </section>
     </footer>
 
@@ -115,7 +117,6 @@
 
   ga('create', 'UA-93513402-1', 'auto');
   ga('send', 'pageview');
-</script>
 </script>
 </body>
 
